2013-01-18  Michael Saboff  <msaboff@apple.com>

        Unreviewed build fix for release builds when DFG_ENABLE_DEBUG_PROPAGATION_VERBOSE is set to 1 in DFGCommon.h.

        * dfg/DFGCFAPhase.cpp: Added #include "Operations.h"

2013-01-18  Michael Saboff  <msaboff@apple.com>

        Change set r140201 broke editing/selection/move-by-word-visually-multi-line.html
        https://bugs.webkit.org/show_bug.cgi?id=107340

        Reviewed by Filip Pizlo.

        Due to the change landed in r140201, more nodes might end up
        generating Int32ToDouble nodes.  Therefore, changed the JSVALUE64
        constant path of compileInt32ToDouble() to use the more
        restrictive isInt32Constant() check on the input.  This check was
        the same as the existing ASSERT() so the ASSERT was eliminated.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compileInt32ToDouble):

2013-01-18  Viatcheslav Ostapenko  <sl.ostapenko@samsung.com>

        Weak GC maps should be easier to use
        https://bugs.webkit.org/show_bug.cgi?id=107312

        Reviewed by Ryosuke Niwa.

        Build fix for linux platforms after r140194.

        * runtime/WeakGCMap.h:
        (WeakGCMap):

2013-01-18  Michael Saboff  <msaboff@apple.com>

        Harden ArithDiv of integers fix-up by inserting Int32ToDouble node directly
        https://bugs.webkit.org/show_bug.cgi?id=107321

        Reviewed by  Filip Pizlo.

        Split out the Int32ToDouble node insertion from fixDoubleEdge() and used it directly when we're fixing up
        an ArithDiv node with integer inputs and output for platforms that don't have integer division.
        Since we are checking that our inputs should be ints, we can just insert the Int32ToDouble node
        without any further checks.

        * dfg/DFGFixupPhase.cpp:
        (JSC::DFG::FixupPhase::fixupNode):
        (JSC::DFG::FixupPhase::fixDoubleEdge):
        (FixupPhase):
        (JSC::DFG::FixupPhase::injectInt32ToDoubleNode):
